23-jun-2009 - adelikat - win32 - Drag & Drop support for savestates
22-jun-2009 - qeed - Revert IRQ inhibit fix, since this seems to break Dragon
					 Warrior 4, added palette reading cases for the new PPU.
21-jun-2009 - adelikat - win32 - memwatch - save menu item is grayed if file hasn't changed
20-jun-2009 - adelikat - win32 - memwatch - fixed a regression I made in 2.0.1 that broke the Save As menu item
17-jun-2009 - qeed - Sound core fix, updated with the correct values for the noise and DMC table, 
                     and also fixed the IRQ inhibit behavior for register $4017. Also fixed the CPU 
                     unofficial opcode ATX, ORing with correct constant $FF instead of $EE, as tested 
                     by blargg's. These fixes passes the IRQ flags test from blargg, and also one more 
                     opcode test from blargg's cpu.nes test.
16-jun-2009 - adelikat - sound core fix - square 1 & square 2 volume controls no longer backwards
11-jun-2009 - zeromus - sound core fix, length counters for APU now correct variables
11-jun-2009 - adelikat - Win32 - Hex Editor - changed ROM values again dsiplay as red, saved in the config as RomFreezeColor
06-jun-2009 - rheiny - Fixed reported issue 2746924 (md5_asciistr() doesn't produce correct string)
23-may-2009 - adelikat - win32 - hex editor - freeze/unfreeze ram addresses now causes the colors to update immediately, but only with groups of addresses highlighted at once (single ones still don't yet update)
23-may-2009 - adelikat - win32 - context menu - Save Movie As... menu item (for when a movie is loaded in read+write mode)
23-may-2009 - adelikat - win32 - added opton to remove a recent item to the roms, lua, and movie recent menus
23-may-2009 - adelikat - win32 - Added a remove recent item function and hooked it up to memwatch recent menu, now if a bad recent item is clicked, the user has a choice to remove it from the list